--- a/Web-Dev-Revision/HTML & CSS/4_DOM.html
+++ b/Web-Dev-Revision/HTML & CSS/4_DOM.html
@@ -20,7 +20,7 @@
         <div class="box">Box1</div>
         <div class="box">Box2</div>
         <div class="box">Box3</div>
-        <div class="box">Box4</div>
+        <div id="purplebox" class="box">Box4</div>
         <div class="box">Box5</div>
     </div>
     <script>
