--- a/Web-Dev-Revision/HTML & CSS/revision.html
+++ b/Web-Dev-Revision/HTML & CSS/revision.html
@@ -1,1 +1,70 @@
-// client (user) -- browser (chrome) -- server (youtube).
+<!-- client (user) -- browser (chrome) -- server (youtube). -->
+<!-- Two types of tags -- paired tags and self closing tags -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Revision of HTML</title>
+    <link rel="stylesheet" href="/Web-Dev-Revision/HTML & CSS/revision_html.css">
+ </head>
+ <body>
+   <h1>Heading 1</h1>
+   <h2>Heading 2</h2>
+   <h3>Heading 3</h3>
+   <h4>Heading 4</h4>
+   <h5>Heading 5</h5>
+   <h6>Heading 6</h6>
+
+   <p style="background-color: pink;">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cumque tempora eum magni atque quaerat ab, voluptate fugiat rem, corporis hic amet ut!
+   </p>
+
+   <!-- <video src="video"></video> -->
+   <!-- <img height="230px" width="auto" src="image" alt="This is an Image"> -->
+
+   <p><a href="https://assignova.com" target="_blank">Assignova</a></p>
+   <p><a href="https://omniprint.in" target="_blank">Omniprint</a></p>
+   <p><a href="https://aogd.org" target="_blank">AOGD</a></p>
+
+   <table>
+      <tr>
+         <th>Name</th>
+         <th>Copmany</th>
+         <th>Designation</th>
+      </tr>
+      <tr>
+         <td>Mohammedkaif</td>
+         <td>AssigNova</td>
+         <td rowspan="2">Wordpress Developer</td>
+      </tr>
+      <tr>
+         <td>New Person</td>
+         <td>New Company</td>
+      </tr>
+   </table>
+
+   <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JS</li>
+   </ul>
+   <ol>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JS</li>
+   </ol>
+   <dl>
+      <dt>HTML</dt>
+      <dd>Hyper Text Markup Language. Use to creating Web pages</dd>
+
+      <dt>CSS</dt>
+      <dd>Cascading Style sheet. Use to Style Web pages</dd>
+
+      <dt>JS</dt>
+      <dd>Java Script. Use to make Web pages interactive</dd>
+   </dl>
+
+   <script src="/Web-Dev-Revision/HTML & CSS/revision_html.js"></script>
+ </body>
+ </html>
